go-runner/src/builder/snapshots/codspeed_go_runner__builder__discovery__tests__discover_benchmarks@example-with-excluded-names.snap
---
source: go-runner/src/builder/discovery.rs
expression: packages
---
[
  {
    "raw_package": "[raw_package]",
    "benchmarks": [
      {
        "name": "BenchmarkProcessData",
        "module_path": "example-with-excluded-names",
        "import_alias": "benchmarkprocessdata_11906522046485331356",
        "qualified_name": "benchmarkprocessdata_11906522046485331356.BenchmarkProcessData",
        "file_path": "main_test.go",
        "is_external": false
      }
    ]
  }
]
