go-runner/src/builder/snapshots/codspeed_go_runner__builder__discovery__tests__discover_benchmarks@example-with-helper.snap
---
source: go-runner/src/builder/discovery.rs
expression: packages
---
[
  {
    "raw_package": "[raw_package]",
    "benchmarks": [
      {
        "name": "BenchmarkFib",
        "module_path": "example-with-helper",
        "import_alias": "benchmarkfib_10228706780785555621",
        "qualified_name": "benchmarkfib_10228706780785555621.BenchmarkFib",
        "file_path": "fib_test.go",
        "is_external": false
      }
    ]
  }
]
