go-runner/src/builder/snapshots/codspeed_go_runner__builder__discovery__tests__discover_benchmarks@example-with-main.snap
---
source: go-runner/src/builder/discovery.rs
expression: packages
---
[
  {
    "raw_package": "[raw_package]",
    "benchmarks": [
      {
        "name": "BenchmarkFib",
        "module_path": "example-with-main",
        "import_alias": "benchmarkfib_7214886513345494073",
        "qualified_name": "benchmarkfib_7214886513345494073.BenchmarkFib",
        "file_path": "fib_test.go",
        "is_external": false
      }
    ]
  }
]
