go-runner/src/builder/snapshots/codspeed_go_runner__builder__discovery__tests__discover_benchmarks@example-with-test-package.snap
---
source: go-runner/src/builder/discovery.rs
expression: packages
---
[
  {
    "raw_package": "[raw_package]",
    "benchmarks": [
      {
        "name": "BenchmarkAdd",
        "module_path": "example-with-test-package",
        "import_alias": "benchmarkadd_15371875375851029853",
        "qualified_name": "benchmarkadd_15371875375851029853.BenchmarkAdd",
        "file_path": "math_test.go",
        "is_external": true
      },
      {
        "name": "BenchmarkMultiply",
        "module_path": "example-with-test-package",
        "import_alias": "benchmarkmultiply_15371875375851029853",
        "qualified_name": "benchmarkmultiply_15371875375851029853.BenchmarkMultiply",
        "file_path": "math_test.go",
        "is_external": true
      }
    ]
  },
  {
    "raw_package": "[raw_package]",
    "benchmarks": [
      {
        "name": "BenchmarkFibonacci10",
        "module_path": "example-with-test-package/fib",
        "import_alias": "benchmarkfibonacci10_13874902556465224305",
        "qualified_name": "benchmarkfibonacci10_13874902556465224305.BenchmarkFibonacci10",
        "file_path": "fib/fib_test.go",
        "is_external": false
      },
      {
        "name": "BenchmarkFibonacci20",
        "module_path": "example-with-test-package/fib",
        "import_alias": "benchmarkfibonacci20_13874902556465224305",
        "qualified_name": "benchmarkfibonacci20_13874902556465224305.BenchmarkFibonacci20",
        "file_path": "fib/fib_test.go",
        "is_external": false
      }
    ]
  },
  {
    "raw_package": "[raw_package]",
    "benchmarks": [
      {
        "name": "BenchmarkFibonacci10",
        "module_path": "example-with-test-package/fib_external",
        "import_alias": "benchmarkfibonacci10_6158637354325539077",
        "qualified_name": "benchmarkfibonacci10_6158637354325539077.BenchmarkFibonacci10",
        "file_path": "fib_external/fib_test.go",
        "is_external": false
      }
    ]
  },
  {
    "raw_package": "[raw_package]",
    "benchmarks": [
      {
        "name": "BenchmarkFibonacci20",
        "module_path": "example-with-test-package/fib_external",
        "import_alias": "benchmarkfibonacci20_6158637354325539077",
        "qualified_name": "benchmarkfibonacci20_6158637354325539077.BenchmarkFibonacci20",
        "file_path": "fib_external/fib_integration_test.go",
        "is_external": true
      }
    ],
    "internal_test_files": [
      "fib_test.go"
    ]
  }
]
